--- a/VIDEVOX/pom.xml
+++ b/VIDEVOX/pom.xml
@@ -6,4 +6,19 @@
 	<version>0.0.1</version>
 	<name>VIDEVOX</name>
 	<description>VIDEVOX video editing with text to speech software</description>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
