--- a/VIDEVOX/pom.xml
+++ b/VIDEVOX/pom.xml
@@ -21,4 +21,11 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.guigarage</groupId>
+			<artifactId>flatter</artifactId>
+			<version>0.7</version>
+		</dependency>
+	</dependencies>
 </project>
