--- a/VIDEVOX/pom.xml
+++ b/VIDEVOX/pom.xml
@@ -36,5 +36,17 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Logging dependencies. -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.12</version>
+		</dependency>
 	</dependencies>
 </project>
