--- a/VIDEVOX/pom.xml
+++ b/VIDEVOX/pom.xml
@@ -48,5 +48,12 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.12</version>
 		</dependency>
+
+		<!-- JSON dependency -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
